added crypto-js utils

--- a/client/package.json
+++ b/client/package.json
@@ -9,10 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^6.4.0",
-    "@fortawesome/free-brands-svg-icons": "^6.4.0",
-    "@fortawesome/free-solid-svg-icons": "^6.4.0",
-    "@fortawesome/react-fontawesome": "^0.2.0",
+    "crypto-js": "^4.1.1",
     "flowbite": "^1.6.5",
     "flowbite-react": "^0.4.3",
     "react": "^18.2.0",
