--- a/client/package.json
+++ b/client/package.json
@@ -12,8 +12,10 @@
     "crypto-js": "^4.1.1",
     "flowbite": "^1.6.5",
     "flowbite-react": "^0.4.3",
+    "i18next": "^22.4.15",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-i18next": "^12.2.2",
     "react-router-dom": "^6.10.0"
   },
   "devDependencies": {
